# brother_ql_web

./: .gitignore  README.md  flake.nix  module.nix  pyproject.toml
brother_ql_web/: __init__.py  font_helpers.py
