[tool.poetry]
name = "brother_ql_web"
description = "WebUI for brother QL label printers"
version = "2020.01.30"
authors = []
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"

bottle = "*"
Jinja2 = "*"
brother-ql = "*"

[tool.poetry.scripts]
brother_ql_web = "brother_ql_web.__init__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
