[tool.poetry]
name = "brother_ql_web"
description = "WebUI for brother QL label printers"
version = "2020.01.30"
authors = []
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"

bottle = "*"
brother-ql = "*"
Jinja2 = "*"
systemd-python = "*"

[tool.poetry.scripts]
brother_ql_web = "brother_ql_web.__init__:main"

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
